Updated mongodb to use mongoose

--- a/fridgebay_html/package.json
+++ b/fridgebay_html/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "body-parser": "^1.4.3",
+    "bson": "^0.2.9",
+    "cloudinary": "^1.0.10",
     "express": "^4.6.0",
-    "http": "0.0.0",
     "logfmt": "^1.1.2",
     "mongodb": "^1.4.7",
-    "monk": "^0.9.0"
+    "mongodb-uri": "^0.9.7",
+    "mongoose": "^3.8.13"
   },
   "repository": {
     "type": "git",
