--- a/fridgebay_html/package.json
+++ b/fridgebay_html/package.json
@@ -9,12 +9,18 @@
     "body-parser": "^1.4.3",
     "bson": "^0.2.9",
     "cloudinary": "^1.0.10",
+    "connect-redis": "^2.0.0",
+    "cookie-parser": "^1.3.2",
     "express": "^3.14.0",
+    "express-session": "^1.7.2",
     "form-data": "^0.1.4",
     "logfmt": "^1.1.2",
     "mongodb": "^1.4.7",
     "mongodb-uri": "^0.9.7",
-    "mongoose": "^3.8.13"
+    "mongoose": "^3.8.13",
+    "passport": "^0.2.0",
+    "passport-google": "^0.3.0",
+    "redis": "^0.11.0"
   },
   "repository": {
     "type": "git",
