--- a/fridgebay_html/package.json
+++ b/fridgebay_html/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^3.8.13",
     "passport": "^0.2.0",
     "passport-google": "^0.3.0",
+    "passport-google-oauth": "^0.1.5",
     "redis": "^0.11.0"
   },
   "repository": {
