--- a/fridgebay_html/package.json
+++ b/fridgebay_html/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^1.4.3",
+    "bson": "^0.2.9",
     "cloudinary": "^1.0.10",
     "connect-redis": "^2.0.0",
     "cookie-parser": "^1.3.2",
